@@ -11,6 +11,7 @@
 * Update - Remove unused "wcpay_deposits_summary_empty_state_click" track.
 * Fix - Applied sentence case on all strings
 * Fix - Missing customer information after guest checkout via Checkout Block
+* Fix - Show correct payment method name during checkout using upe methods.
 
 = 3.1.0 - 2021-10-06 =
 * Fix - Issue affecting analytics for Multi-Currency orders made with a zero-decimal to non-zero decimal conversion.
